[package]
name = "tera"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = "1"

# And optional ones
indexmap = { version = "2", optional = true }
hashbrown = { version = "0.14", optional = true }

[features]
default = ["serde"]
# Use hashbrown with ahash hashing to improve performance
ahash = ["hashbrown"]
preserve_order = ["dep:indexmap"]
# Enable serde support
serde = ["hashbrown/serde"]

[dev-dependencies]
criterion = "0.5"
insta = { version = "1", features = ["glob"] }
serde_derive = "1.0.156"

[lib]
doctest = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "templates"
harness = false
