[package]
name = "tera-contrib"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = { version = "2", path = "../tera", default-features = false }

regex = { version = "1.11.1", optional = true}
slug = {version = "0.1", optional = true}
rand = {version = "0.9", optional = true}
jiff = {version = "0.2.1", optional = true}

[features]
date = ["dep:jiff"]
