[package]
name = "tera-contrib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tera = { version = "2", path = "../tera", default-features = false }

regex = { version = "1.11.1", optional = true}
slug = {version = "0.1", optional = true}
rand = {version = "0.9", optional = true}
jiff = {version = "0.2.1", optional = true}
percent-encoding = {version = "2.2", optional = true}
serde_json = {version = "1.0.140", optional = true}
humansize = {version = "2", optional = true}
formatx = {version = "0.2", optional = true}

[features]
date = ["dep:jiff"]
urlencode = ["dep:percent-encoding"]
json = ["dep:serde_json"]
filesize_format = ["dep:humansize"]
format = ["dep:formatx"]
