[package]
name = "tera"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = "1"

# Optional deps
indexmap = { version = "2", optional = true }
unic-segment = { version = "0.9", optional = true }
walkdir = { version = "2.5.0", optional = true }
globset = { version = "0.4.14", optional = true }

# Crates for speedup
ahash = { version = "0.8", optional = true }
itoa = { version = "1.0.9", optional = true }
pulldown-cmark-escape = { version = "0.10", optional = true}

[features]
default = []
# Use hashbrown with ahash hashing to improve performance
fast_hash = ["dep:ahash", "ahash?/serde"]
# Keep order of insertion for Value
preserve_order = ["dep:indexmap"]
# If we want Tera to work with graphemes clusters rather than utf-8 characters when iterating on strings
unicode = ["dep:unic-segment"]
# Use itoa to format numbers (instead of std::fmt)
no_fmt = ["dep:itoa"]
# Use a faster HTML escape than the default one
fast_escape = ["dep:pulldown-cmark-escape"]
# Improve performance by adding extra dependencies
fast = ["no_fmt", "fast_escape", "fast_hash"]
# Loads files disks using a glob
glob_fs = ["dep:walkdir", "dep:globset"]

[dev-dependencies]
criterion = "0.5"
insta = { version = "1", features = ["glob"] }
serde_derive = "1.0.156"
tempfile = "3"

[lib]
doctest = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "templates"
harness = false
